feed-listのhtmlをロールバック、api動作確認用画面の追加など

--- a/src/index.html
+++ b/src/index.html
@@ -60,5 +60,7 @@
         <script src="app_modules/modules/feed/detail/detail.js"></script>
         <script src="app_modules/modules/feed/post/post.js"></script>
         <script src="app_modules/modules/stock/list.js"></script>
+        <script src="app_modules/modules/api-console/api-console.js"></script>
+        
     </body>
 </html>
