Circle.WebAPIとつながるようにRestangularによるAPI呼び出し処理を追加。なお接続先はlocalhost:8475

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
         <script src="app_modules/app.js"></script>
         <script src="app_modules/config.js"></script>
         <script src="app_modules/constants.js"></script>
+        <script src="app_modules/services/feedService.js"></script>
         <script src="app_modules/modules/main/main.js"></script>
         <script src="app_modules/modules/feed/list/list.js"></script>
         <script src="app_modules/modules/feed/detail/detail.js"></script>
