--- a/src/app_modules/modules/feed/detail/detail.html
+++ b/src/app_modules/modules/feed/detail/detail.html
@@ -1,10 +1,10 @@
 <div class="content-block">
 	<div class="" style="padding: 0 0 0 20px;">
-		<p><h3 style="color: #017681;font-weight: bold;">{{itemData.title}}</h3></p>
+		<p><h3 style="color: #017681;font-weight: bold;">{{article.Title}}</h3></p>
 		<!--<p><i class="icon ion-ios-pricetag"></i>&nbsp;{{itemData.tagName}}</p>-->
 		<ul class="nav nav-pills">
 			<li role="presentation">
-				<p>{{itemData.userName}}が{{itemData.postedDate | date: 'yyyy/MM/dd'}}に投稿</p>
+				<p>{{article.AuthorName}}が{{article.Created | date: 'yyyy/MM/dd'}}に投稿</p>
 			</li>
 			<li role="presentation" class="pull-right">
 				<a href ng-click="stockFeed()" uib-popover="この記事をストックしました" popover-trigger="'focus'" popover-placement="left">
@@ -25,10 +25,10 @@
 			</a>
 		</li>
 	</ul>
-	<div class="reffer-comment-bg" style="margin: 20px;" ng-repeat="commentItem in commentList">
+	<div class="reffer-comment-bg" style="margin: 20px;" ng-repeat="comment in comments">
 		<div class="form-group">
-			<label><i class="icon ion-chatbubble-working"></i>&nbsp;{{commentItem.userName}}</label>
-			<div marked="commentItem.commentContents" class="outline" style="padding: 20px"></div>
+			<label><i class="icon ion-chatbubble-working"></i>&nbsp;{{comment.OwnerName}}</label>
+			<div marked="comment.Body" class="outline" style="padding: 20px"></div>
 		</div>
 	</div>
 	<div class="input-comment-bg" style="margin: 20px;">
@@ -44,7 +44,7 @@
 			</textarea>
 		</div>
 		<div class="text-center">
-			<button type="submit" class="btn btn-beige">
+			<button type="submit" class="btn btn-beige" ng-click="postComment(commentEditorValue)">
 				<i class="icon ion-ios-compose"></i>&nbsp;
 				投稿する
 			</button>
