--- a/src/app_modules/modules/feed/detail/detail.html
+++ b/src/app_modules/modules/feed/detail/detail.html
@@ -1,22 +1,25 @@
 <div class="content-block">
 	<div class="" style="padding: 0 0 0 20px;">
-		<p><h3 style="color: #017681;font-weight: bold;">{{article.Title}}</h3></p>
+		<p><h3 style="color: #017681;font-weight: bold;">{{article.title}}</h3></p>
 		<!--<p><i class="icon ion-ios-pricetag"></i>&nbsp;{{itemData.tagName}}</p>-->
 		<ul class="nav nav-pills">
 			<li role="presentation">
-				<p>{{article.AuthorName}}が{{article.Created | date: 'yyyy/MM/dd'}}に投稿</p>
+				<p>{{article.author_name}}が{{article.created | date: 'yyyy/MM/dd'}}に投稿</p>
 			</li>
+			<!--
 			<li role="presentation" class="pull-right">
 				<a href ng-click="stockFeed()" uib-popover="この記事をストックしました" popover-trigger="'focus'" popover-placement="left">
 					<i class="icon ion-android-download"></i>
 					ストック
 				</a>
 			</li>
+			-->
 		</ul>
 	</div>
 	<div class="" style="background-color: rgba(243,243,243,0.7);">
-		<div marked="markdownStr" class="outline" style="padding: 20px"></div>
+		<div marked="article.body" class="outline" style="padding: 20px"></div>
 	</div>
+	<!--
 	<ul class="nav nav-pills" style="margin-top: 10px;">
 		<li role="presentation" class="pull-right">
 			<a href ng-click="stockFeed()" uib-popover="この記事をストックしました" popover-trigger="'focus'" popover-placement="left">
@@ -25,10 +28,11 @@
 			</a>
 		</li>
 	</ul>
+	-->
 	<div class="reffer-comment-bg" style="margin: 20px;" ng-repeat="comment in comments">
 		<div class="form-group">
-			<label><i class="icon ion-chatbubble-working"></i>&nbsp;{{comment.OwnerName}}</label>
-			<div marked="comment.Body" class="outline" style="padding: 20px"></div>
+			<label><i class="icon ion-chatbubble-working"></i>&nbsp;{{comment.owner_name}}</label>
+			<div marked="comment.body" class="outline" style="padding: 20px"></div>
 		</div>
 	</div>
 	<div class="input-comment-bg" style="margin: 20px;">
