--- a/src/app_modules/modules/feed/list/list.html
+++ b/src/app_modules/modules/feed/list/list.html
@@ -77,10 +77,10 @@
 				<div class="list-group-item list-group-border" ng-repeat="article in articles">
 					<div class="media">
 						<div class="media-body">
-							<a ui-sref="feed-list.feed-detail({id:article.Id})"><h4 class="list-group-item-heading">{{article.Title}}</h4></a>
-							<p class="list-group-item-text">{{article.AuthorName}}が{{article.Created | date: 'yyyy/MM/dd'}}に投稿</p>
+							<a ui-sref="feed-list.feed-detail({id:article.id})"><h4 class="list-group-item-heading">{{article.title}}</h4></a>
+							<p class="list-group-item-text">{{article.author_name}}が{{article.created | date: 'yyyy/MM/dd'}}に投稿</p>
 							<!--<p class="list-group-item-text"><i class="icon ion-ios-pricetag"></i>&nbsp;{{row.tagName}}</p>-->
-							<p class="list-group-item-text">{{article.Body}}</p>
+							<p class="list-group-item-text">{{article.body}}</p>
 						</div>
 						<div class="media-right" style="vertical-align: middle;">
 							<i class="pull-right icon ion-ios-arrow-right"></i>
