index.htmlにtitleタグを追加

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <title>Circle</title>
+        
         <link href="favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
         <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="libs/font-awesome/css/font-awesome.min.css" rel="stylesheet">
