--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <title>Circle　Update!!!</title>
+        <title>Circle</title>
         
         <link href="favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
         <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
